--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 
 <body>
+  <div class="options-container">
+    <button class="option-button" id="hiraganaButton">Hiragana</button>
+    <button class="option-button" id="katakanaButton">Katakana</button>
+    <button class="option-button" id="bothButton">Both</button>
+  </div>
+
   <div class="quiz-container">
-    <h1>Hiragana/Katakana Quiz</h1>
-    <p class="question" id="question">What is this character?</p>
+    <h1 id="title">Hiragana/Katakana Quiz</h1>
+    <p class="question" id="question">Choose option above</p>
     <div class="options">
       <button class="option" id="option1"></button>
       <button class="option" id="option2"></button>
@@ -19,7 +25,10 @@
     </div>
     <p class="result" id="result"></p>
     <button class="next-button" id="nextButton">Next</button>
+    <p id="current"></p>
+    <button class="restart-button" id="restartButton">Play Again</button>
   </div>
-  <script src="script.js"></script>
+  
+  <script type="module" src="script.js"></script>
 </body>
 </html>
