Add Kanji characters

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <div class="options-container">
     <button class="option-button" id="hiraganaButton">Hiragana</button>
     <button class="option-button" id="katakanaButton">Katakana</button>
-    <button class="option-button" id="bothButton">Both</button>
+    <button class="option-button" id="bothButton">Hiragana/Katakana</button>
+    <button class="option-button" id="kanjiButton">Kanji</button>
+    <button class="option-button" id="allButton">All</button>
   </div>
 
   <div class="quiz-container">
