--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Hiragana/Katakana Quiz</title>
+  <title>Japanese Quiz</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   </div>
 
   <div class="quiz-container">
-    <h1 id="title">Hiragana/Katakana Quiz</h1>
+    <h1 id="title">Japanese Quiz</h1>
     <p class="question" id="question">Choose option above</p>
     <div class="options">
       <button class="option" id="option1"></button>
