--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Japanese Quiz</title>
+  <title>Hiragana/Katakana Quiz</title>
 </head>
 
 <body>
+  <h1 id="title">Japanese Quiz</h1>
   <div class="options-container">
     <button class="option-button" id="hiraganaButton">Hiragana</button>
     <button class="option-button" id="katakanaButton">Katakana</button>
@@ -17,8 +18,7 @@
   </div>
 
   <div class="quiz-container">
-    <h1 id="title">Japanese Quiz</h1>
-    <p class="question" id="question">Choose option above</p>
+    <div class="question" id="question"></div>
     <div class="options">
       <button class="option" id="option1"></button>
       <button class="option" id="option2"></button>
@@ -29,6 +29,7 @@
     <button class="next-button" id="nextButton">Next</button>
     <p id="current"></p>
     <button class="restart-button" id="restartButton">Play Again</button>
+    <button class="home-button" id="homeButton">Home</button>
   </div>
   
   <script type="module" src="script.js"></script>
