Format index.html

--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Japanese Quiz</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Japanese Quiz</title>
+  </head>
 
-<body>
-  <div class="container">
-    <h1 id="title">Japanese Quiz</h1>
-    <div class="options-container">
-      <button class="option-button" id="hiraganaButton">Hiragana</button>
-      <button class="option-button" id="katakanaButton">Katakana</button>
-      <button class="option-button" id="bothButton">Hiragana/Katakana</button>
-      <button class="option-button" id="kanjiButton">Kanji</button>
-      <button class="option-button" id="allButton">All</button>
-    </div>
-  
-    <div class="quiz-container">
-      <div class="question" id="question"></div>
-      <div class="options">
-        <button class="option" id="option1"></button>
-        <button class="option" id="option2"></button>
-        <button class="option" id="option3"></button>
-        <button class="option" id="option4"></button>
+  <body>
+    <div class="container">
+      <h1 id="title">Japanese Quiz</h1>
+      <div class="options-container">
+        <button class="option-button" id="hiraganaButton">Hiragana</button>
+        <button class="option-button" id="katakanaButton">Katakana</button>
+        <button class="option-button" id="bothButton">Hiragana/Katakana</button>
+        <button class="option-button" id="kanjiButton">Kanji</button>
+        <button class="option-button" id="allButton">All</button>
       </div>
-      <p class="result" id="result"></p>
-      <button class="next-button" id="nextButton">Next</button>
-      <p id="current"></p>
-      <button class="restart-button" id="restartButton">Play Again</button>
-      <button class="home-button" id="homeButton">Home</button>
+
+      <div class="quiz-container">
+        <div class="question" id="question"></div>
+        <div class="options">
+          <button class="option" id="option1"></button>
+          <button class="option" id="option2"></button>
+          <button class="option" id="option3"></button>
+          <button class="option" id="option4"></button>
+        </div>
+        <p class="result" id="result"></p>
+        <button class="next-button" id="nextButton">Next</button>
+        <p id="current"></p>
+        <button class="restart-button" id="restartButton">Play Again</button>
+        <button class="home-button" id="homeButton">Home</button>
+      </div>
     </div>
-  </div>
-  
-  <script type="module" src="script.js"></script>
-</body>
+
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
