Add language switch functionality between English and Kana

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
           <button class="option" id="option4"></button>
         </div>
         <p class="result" id="result"></p>
-        <button class="next-button" id="nextButton">Next</button>
+        <div class="buttons">
+          <button class="switch-button" id="switchButton">English</button>
+          <button class="next-button" id="nextButton">Next</button>
+        </div>
         <p id="current"></p>
         <button class="restart-button" id="restartButton">Play Again</button>
         <button class="home-button" id="homeButton">Home</button>
